--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -4,6 +4,28 @@
 
 <head>
 
+  <meta name="google-site-verification" content="OoM2GuIbyW9r8Zi1ygTJJZ8N2I1mOwfgVhagiZYSPtY" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-356QPR0VTP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-356QPR0VTP');
+  </script>
+  
+  
+  
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-M2NQNR6J');</script>
+  <!-- End Google Tag Manager -->
+  
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="Trivlogic">
 
@@ -33,6 +55,10 @@
 
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2NQNR6J"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <svg class="d-none">
     <symbol id="icon_nav" viewBox="0 0 25 18">
       <rect width="25" height="2" />
@@ -1266,24 +1292,7 @@
           </div>
           <% }); %>
             <% } %>
-            <section class="grid-banner container mb-3" id="section-grid-banner">
-              <div class="row">
-                <% if (Array.isArray(bannerTwo) && bannerTwo.length) { %>
-                  <% bannerTwo.slice(0,4).forEach(function(banner, idx) { %>
-                    <div class="col-lg-6">
-                      <div class="grid-banner__item position-relative mb-3">
-                        <a href="<%= banner.link || '#' %>">
-                          <img loading="lazy" class="w-100 poster-btn" src="<%= banner.image %>" width="450" height="450"
-                            alt="Banner <%= idx+1 %>">
-                        </a>
-                      </div>
-                    </div>
-                    <% }); %>
-                      <% } else { %>
-                        <!-- No grid banners available -->
-                        <% } %>
-              </div><!-- /.row -->
-            </section>
+          
     </section>
 
     <section class="products-carousel container">
@@ -1408,8 +1417,26 @@
       </div><!-- /.position-relative -->
 
     </section>
-
     <div class="mb-4 pb-4 mb-xl-4 mt-xl-3 pt-xl-3 pb-xl-4"></div>
+    <section class="grid-banner container mb-3" id="section-grid-banner">
+      <div class="row">
+        <% if (Array.isArray(bannerTwo) && bannerTwo.length) { %>
+          <% bannerTwo.slice(0,4).forEach(function(banner, idx) { %>
+            <div class="col-lg-6">
+              <div class="grid-banner__item position-relative mb-3">
+                <a href="<%= banner.link || '#' %>">
+                  <img loading="lazy" class="w-100 poster-btn" src="<%= banner.image %>" width="450" height="450"
+                    alt="Banner <%= idx+1 %>">
+                </a>
+              </div>
+            </div>
+            <% }); %>
+              <% } else { %>
+                <!-- No grid banners available -->
+                <% } %>
+      </div><!-- /.row -->
+    </section>
+ 
     <section class="testimonial-carousel container py-3">
       <h2 class="section-title text-uppercase fw-bold text-center mb-3 gradient-text"
         style="font-size:2rem; letter-spacing:1px; ">What People Say About Us</h2>
@@ -1463,7 +1490,7 @@
                             <% } %>
                     </div>
                     <p class="testimonial-text mb-1" style="font-size:1.02rem;line-height:1.4;color:#222;">
-                      <span style="font-size:1.5rem;vertical-align:middle;color:#fed304;">“</span>
+                      <span style="font-size:1.5rem;vertical-align:middle;color:#fed304;"></span>
                       <%= testimonial.content %>
                     </p>
                     <div class="author-name fw-bold mt-1" style="font-size:1rem;letter-spacing:0.5px;color:#fed304;">
