--- a/backend/views/user/cart.ejs
+++ b/backend/views/user/cart.ejs
@@ -4,35 +4,9 @@
 
 <head>
 
-<meta name="google-site-verification" content="OoM2GuIbyW9r8Zi1ygTJJZ8N2I1mOwfgVhagiZYSPtY" />
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-356QPR0VTP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-356QPR0VTP');
-</script>
-
-
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-M2NQNR6J');</script>
-<!-- End Google Tag Manager -->
-
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-KTMNTPV3');</script>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="author" content="flexkit">
+  <meta name="author" content="trivlogic">
 
   <link rel="shortcut icon" href="images/stayrare/fav.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com/">
@@ -54,9 +28,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2NQNR6J"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
   <!-- End Google Tag Manager (noscript) -->
   <svg class="d-none">
     <symbol id="icon_nav" viewBox="0 0 25 18">
@@ -1369,12 +1341,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div><!-- /.col-3 -->
     </div><!-- /.row -->
   </footer><!-- /.footer-mobile container position-fixed d-md-none bottom-0 -->
-
-
-
-
-
-
 
 
   <!-- Go To Top -->
