product details & seo

--- a/backend/views/user/cart.ejs
+++ b/backend/views/user/cart.ejs
@@ -3,33 +3,54 @@
 
 
 <head>
+  <meta name="google-site-verification" content="OoM2GuIbyW9r8Zi1ygTJJZ8N2I1mOwfgVhagiZYSPtY" />
 
-
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-356QPR0VTP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-356QPR0VTP');
+  </script>
+  
+  
+  
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-M2NQNR6J');</script>
+  <!-- End Google Tag Manager -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="trivlogic">
 
   <link rel="shortcut icon" href="images/stayrare/fav.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com/">
 
-  <!-- Fonts -->
+ 
   <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Allura&amp;display=swap" rel="stylesheet">
 
-  <!-- Stylesheets -->
+
   <link rel="stylesheet" href="css/plugins/swiper.min.css" type="text/css">
   <link rel="stylesheet" href="css/plugins/jquery.fancybox.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Document Title -->
+
   <title>CART | STAY RARE</title>
 
 </head>
 
 <body>
-
-  <!-- End Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2NQNR6J"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   <svg class="d-none">
     <symbol id="icon_nav" viewBox="0 0 25 18">
       <rect width="25" height="2"/><rect y="8" width="20" height="2"/><rect y="16" width="25" height="2"/>
@@ -844,10 +865,10 @@
                 </div>
             </div>
             <div class="mobile_fixed-btn_wrapper">
-                <div class="button-wrapper container">
-                    <a class="btn btn-primary btn-checkout mb-3" id="checkout-btn" href="#">PROCEED TO CHECKOUT</a>
-                    <button class="btn btn-secondary ml-2" id="clear-cart-btn" style="background-color: #e74c3c;">Clear Cart</button>
+                <div class="button-wrapper container" style="display: flex; justify-content: center; align-items: center; height: 100%;">
+                    <a class="btn btn-primary btn-checkout mb-3" id="checkout-btn" href="#" style="display: flex; align-items: center; justify-content: center; width: 100%; max-width: 320px; height: 56px; font-size: 1.1rem;">PROCEED TO CHECKOUT</a>
                 </div>
+                <button class="btn btn-secondary ml-2" id="clear-cart-btn" style="background-color: #e74c3c;">Clear Cart</button>
             </div>
           </div>
         </div>
@@ -1340,7 +1361,7 @@
         </a>
       </div><!-- /.col-3 -->
     </div><!-- /.row -->
-  </footer><!-- /.footer-mobile container position-fixed d-md-none bottom-0 -->
+  </footer>
 
 
   <!-- Go To Top -->
