--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -13142,6 +13142,7 @@ fieldset:disabled .btn {
   background-color: #3B1E58;
   border-color: #222222;
   box-shadow: none;
+  border-radius: 4px;
 }
 
 .btn-primary:hover {
@@ -13233,6 +13234,7 @@ fieldset:disabled .btn {
   background-color: #767676;
   border-color: #767676;
   box-shadow: none;
+  border-radius: 3px;
 }
 
 .btn-secondary:hover {
@@ -16206,6 +16208,7 @@ textarea.form-control.is-invalid {
   background-color: #ffffff;
   outline: none;
   -moz-appearance: textfield;
+  border-radius: 4px;
 }
 
 .qty-control__reduce,
@@ -22110,6 +22113,7 @@ a.add-to-wishlist.active .flaticon.flaticon-heart {
   margin-bottom: 1.25rem;
   padding: 2.5rem 2.5rem 0.5rem;
   max-width: 100%;
+  border-radius: 4px;
 }
 
 @media (min-width: 1200px) {
@@ -22376,7 +22380,7 @@ a.add-to-wishlist.active .flaticon.flaticon-heart {
 
 .shopping-cart__product-item img {
   width: 7.5rem;
-  height: auto;
+  /* height: 7.5rem; */
 }
 
 .shopping-cart__product-item__detail h4,
